--- a/index.html
+++ b/index.html
@@ -61,7 +61,78 @@
 
             </header>
             <span class="image featured">
-                <img src="images/Section1.jpg" alt="" />
+                <!-- Page Wrap -->
+    <div class="page-wrap">
+        ​
+                <div id="home-slider">
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide swiper-slide-one">
+                                <div class="swiper-image" data-swiper-parallax-y="-20%">
+                                    <div class="swiper-image-inner swiper-image-left swiper-image-one">
+                                        <h1>
+                                            <span class="emphasis">Të sfidohemi</span>.
+                                        </h1>
+                                    </div>
+                                </div>
+                                <div class="swiper-image" data-swiper-parallax-y="35%">
+                                    <div class="swiper-image-inner swiper-image-right swiper-image-two">
+                                        <p class="paragraph">
+                                            Të sfidojmë vetën për të arritur gjithmonë një nivel më të madh se ai që 
+                                            presim është i dobishëm jo vetëm për shëndetin tonë mendor, por edhe për 
+                                            mirëqenien tonë personale. Ndërsa pushtojmë sfida që qëndrojnë në rrugën tonë 
+                                            si bllokime në rrugë, duke refuzuar të dorëzohemi, ne gjejmë besim në aftësitë tona. 
+                                            Besimi është një karakteristikë kaq e rëndësishme për të gjetur rrugën drejt suksesit.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide swiper-slide-two">
+                                <div class="swiper-image" data-swiper-parallax-y="-20%">
+                                    <div class="swiper-image-inner swiper-image-left swiper-image-three">
+                                        <h1>
+                                            <span class="emphasis">Të mësojmë</span>.
+                                        </h1>
+                                    </div>
+                                </div>
+                                <div class="swiper-image" data-swiper-parallax-y="35%">
+                                    <div class="swiper-image-inner swiper-image-right swiper-image-four">
+                                        <p class="paragraph">
+                                            Motivimi është sfida më e rëndësishme drejt suksesit në jetën akademike, 
+                                            dhe mund të bëhet tejet sfiduese veçanërisht kur keni shumë detyra, kurse,
+                                             provime ose ese për të dorëzuar. Shpesh puna juaj mund të bëhet sfiduese, 
+                                             por këtu tek ne do të gjeni mbështjetjen e duhur, këshilla të nevojshme për 
+                                             t'ju motivuar për të studiuar, si dhe trajnime online për secilën fushë të studimit.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide swiper-slide-three">
+                                <div class="swiper-image" data-swiper-parallax-y="-20%">
+                                    <div class="swiper-image-inner swiper-image-left swiper-image-five">
+                                        <h1>
+                                            <span class="emphasis">Të luajmë</span>.
+                                        </h1>
+                                    </div>
+                                </div>
+                                <div class="swiper-image" data-swiper-parallax-y="35%">
+                                    <div class="swiper-image-inner swiper-image-right swiper-image-six">
+                                        <p class="paragraph">
+                                            Lojërat edukative janë një mjet i shkëlqyeshëm për ndërtimin e aftësive në matematikë, 
+                                            gjuhë, shkencë, studime shoqërore dhe shumë më tepër. Këto lojëra janë argëtuese, 
+                                            të mësojnë aftësi të rëndësishme në secilën fushë studimi të veçantë dhe ato janë falas. 
+                                            Ju jeni në vendin e duhur! Le të studiojmë dhe të argëtohemi së bashku.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+        ​
+                        </div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                </div>
+        ​
+            </div>
             </span>
         </section>
 
@@ -209,6 +280,9 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/regjistrohu.js"></script>
     <script src="assets/js/util.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
+    <script src="assets/js/slider.js"></script>
 </body>
 
 </html>
