--- a/rrethnesh.html
+++ b/rrethnesh.html
@@ -30,7 +30,7 @@
                             <a href="rregullat.html">Rregullat</a>
                         </li>
                         <li>
-                            <a href="index.html">Grupet</a>
+                            <a href="grupet.html">Grupet</a>
                         </li>
                         <li>
                             <a href="kontakt.html">Kontakt</a>
