--- a/grupet.html
+++ b/grupet.html
@@ -16,7 +16,7 @@
         <header id="header">
             <header id="header" class="alt">
                 <h1>
-                    <a href="index.html">High Schoolar's Hub</a>
+                    <a href="index.html">Grupet</a>
                 </h1>
                 <nav id="nav">
                     <ul>
@@ -67,47 +67,56 @@
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/GjeSh.png" alt="" />
-                                        <</span>
+                                    </span>
+                                    <a href="kuizet/gjuheSh.html" class="button small fit">Gjuhë Shqipe</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/anglisht.png" alt="" />
                                     </span>
+                                    <a href="kuizet/gjuheAng.html" class="button small fit">Gjuhë Angleze</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/math.png" alt="" />
                                     </span>
+                                    <a href="kuizet/math.html" class="button small fit">Matematikë</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/fizik.png" alt="" />
                                     </span>
+                                    <a href="kuizet/fizik.html" class="button small fit">Fizik</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/kimi.png" alt="" />
                                     </span>
+                                    <a href="kuizet/kimi.html" class="button small fit">Kimi</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/bio.png" alt="" />
                                     </span>
+                                    <a href="kuizet/bio.html" class="button small fit">Biologji</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/tik.png" alt="" />
                                     </span>
+                                    <a href="kuizet/tik.html" class="button small fit">TIK</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/histori.png" alt="" />
                                     </span>
+                                    <a href="kuizet/histori.html" class="button small fit">Histori</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/Gjeo.png" alt="" />
                                     </span>
+                                    <a href="kuizet/gjeo.html" class="button small fit">Gjeografi</a>
                                 </div>
                             </div>
                         </div>
