--- a/index.html
+++ b/index.html
@@ -182,12 +182,13 @@
                     <span class="image featured">
                         <img src="images/pic02.jpg" alt="" />
                     </span>
-                    <h3>Përgatitje për provim të maturës</h3>
-                    <p>Përgatitu për provim të maturës përmes platformës tonë që garanton 100% kalueshmëri në provim të maturës
-                        pas përfundimit me sukses të këtij kursi.</p>
+                    <h3>Mëso të programim online</h3>
+                    <p>Mëso gjithqka rreth programimit falas. Gjeni gjuhet me te avancuara te programimit dhe behuni pjese e
+                        nje tregu sfidues.
+                    </p>
                     <ul class="actions special">
                         <li>
-                            <a href="#" class="button alt">Mëso më shumë</a>
+                            <a href="https://www.codecademy.com/" class="button alt">Mëso më shumë</a>
                         </li>
                     </ul>
                 </section>
@@ -204,7 +205,7 @@
                         bursë në universitetet tona partnere.</p>
                     <ul class="actions special">
                         <li>
-                            <a href="#" class="button alt">Mëso më shumë</a>
+                            <a href="http://www.mladiinfo.eu/category/scholarships/" class="button alt">Mëso më shumë</a>
                         </li>
                     </ul>
                 </section>
