--- a/grupet.html
+++ b/grupet.html
@@ -68,7 +68,7 @@
                                     <span class="image fit">
                                         <img src="images/GjeSh.png" alt="" />
                                     </span>
-                                    <a href="kuizet/gjuheSh.html" class="button small fit">Gjuhë Shqipe</a>
+                                    <a href="gjuheSh.html" class="button small fit">Gjuhë Shqipe</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
