--- a/gjuheSh.html
+++ b/gjuheSh.html
@@ -57,7 +57,7 @@
                     <section class="box">
                         <h3>Kuiz</h3>
 
-                        <h4>Gjuhe Shqipe</h4>
+                        <h4>Gjuhë Shqipe</h4>
                         <div class="table-wrapper">
                             <table>
                                 <thead>
