--- a/grupet.html
+++ b/grupet.html
@@ -16,7 +16,7 @@
         <header id="header">
             <header id="header" class="alt">
                 <h1>
-                    <a href="index.html">Grupet</a>
+                    <a href="grupet.html">Grupet</a>
                 </h1>
                 <nav id="nav">
                     <ul>
@@ -48,12 +48,10 @@
             <div class="row">
                 <div class="col-12">
                     <header>
-                        <h3>Udhërrefyes</h3>
-                        <p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+                        <h3>Udhërrëfyes</h3>
+                        <p>Më poshtë janë dhënë disa kuize nga lëndë të ndryshme</p>
                     </header>
-                    <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
-                        faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
-                        varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+
                 </div>
             </div>
 
@@ -98,25 +96,25 @@
                                     <span class="image fit">
                                         <img src="images/bio.png" alt="" />
                                     </span>
-                                    <a href="kuizet/bio.html" class="button small fit">Biologji</a>
+                                    <a href="bio.html" class="button small fit">Biologji</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/tik.png" alt="" />
                                     </span>
-                                    <a href="kuizet/tik.html" class="button small fit">TIK</a>
+                                    <a href="tik.html" class="button small fit">TIK</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/histori.png" alt="" />
                                     </span>
-                                    <a href="kuizet/histori.html" class="button small fit">Histori</a>
+                                    <a href="histori.html" class="button small fit">Histori</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/Gjeo.png" alt="" />
                                     </span>
-                                    <a href="kuizet/gjeo.html" class="button small fit">Gjeografi</a>
+                                    <a href="gjeo.html" class="button small fit">Gjeografi</a>
                                 </div>
                             </div>
                         </div>
