--- a/grupet.html
+++ b/grupet.html
@@ -72,25 +72,25 @@
                                     <span class="image fit">
                                         <img src="images/anglisht.png" alt="" />
                                     </span>
-                                    <a href="kuizet/gjuheAng.html" class="button small fit">Gjuhë Angleze</a>
+                                    <a href="gjuheAng.html" class="button small fit">Gjuhë Angleze</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/math.png" alt="" />
                                     </span>
-                                    <a href="kuizet/math.html" class="button small fit">Matematikë</a>
+                                    <a href="math.html" class="button small fit">Matematikë</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/fizik.png" alt="" />
                                     </span>
-                                    <a href="kuizet/fizik.html" class="button small fit">Fizik</a>
+                                    <a href="fizik.html" class="button small fit">Fizik</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
                                         <img src="images/kimi.png" alt="" />
                                     </span>
-                                    <a href="kuizet/kimi.html" class="button small fit">Kimi</a>
+                                    <a href="kimi.html" class="button small fit">Kimi</a>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
