--- a/kontakt.html
+++ b/kontakt.html
@@ -42,7 +42,7 @@
         <section id="main" class="container medium">
             <header>
                 <h2>Na kontaktoni</h2>
-                <p>Na tregoni se qfarë mendoni per web faqen tonë</p>
+                <p>Na tregoni se çfarë mendoni per web faqen tonë</p>
             </header>
             <div class="box">
                 <form method="post" action="#">
