--- a/rregullat.html
+++ b/rregullat.html
@@ -50,32 +50,25 @@
                     <img src="images/pic01.jpg" alt="" />
                 </span>
                 <h3>Rregulla 1</h3>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                    et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-                    Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
-                    sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                    aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
-                    kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-                    sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed
-                    diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                    sea takimata sanctus est Lorem ipsum dolor sit amet .
+                <p>Ndalohet rreptësisht kopijimi i postimeve, faqeve, animacioneve, fotove etj. dhe 
+                    çdo gjëje tjetër të kësaj faqeje pa lejen e autorit (adminit). Nëse kopijoni diçka
+                     duhet të shkruani burimin e informacionit pra web adresën e faqes sonë.
+                      Mos respektimi i këtij rregulli dënohet edhe me ligj.
+
                 </p>
                 <div class="row">
                     <div class="row-6 row-12-mobilep">
                         <h3>Rregulla 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                            dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-                            sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
+                        <p>Komentet tuaja duhet të përmbajnë fjalë jo banale. Komenti juaj do të fshihet 
+                            automatikisht nëse ka përmbajtje banale. Ndalohet sharja ose fyrerja e përdoruesve 
+                            të tjerë nëpërmjet cilës do formë të mundshme.</p>
                     </div>
                     <div class="row-6 row-12-mobilep">
                         <h3>Rregulla 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                            dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-                            sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
+                        <p>Personat të cilët keqpërdorin emailin tonë do të futen në listën e zezë të faqes</p>
+
+                        <p>Këto ishin rregullat themelore të faqes sonë. Nuk janë shumë dhe mund të respektohen nga secili përdorues.
+                            Faleminderit për mirëkutpim!</p>
                     </div>
                 </div>
             </div>
