--- a/rrethnesh.html
+++ b/rrethnesh.html
@@ -50,24 +50,27 @@
                     <img src="images/pic01.jpg" alt="" />
                 </span>
                 <h3>Misioni</h3>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                    et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-                    Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
-                    sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                    aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
-                    kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-                    sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed
-                    diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                    sea takimata sanctus est Lorem ipsum dolor sit amet .
+                <p> Misioni ynë i përditshëm është të jemi të besueshëm për klientët tanë duke krijuar me ta
+                     marrëdhënie solide dhe afatgjata të bazuar në besim, respekt dhe sinqeritet.
+                     Si mision kemi:<br>
+                     Përsosmëria – Të ofrojmë cilësi të lartë të shërbimit të klientit, përmirësimin e vazhdueshëm 
+                     të cilësisë dhe udhëheqjes në fushën tonë (Të jemi më të mirët)<br>
+                     Integriteti – Të zbatojmë standardet më të larta të profesionalizmit, etikës dhe përgjegjësinë 
+                     individuale (Të bëhemi shembull)<br>
+                     Respekti – Respektojmë dhe vlerësojmë individualitetin, ndryshueshmërinë dhe kontributet e klienteve
+                      tanë dhe secilit prej nesh (Të jemi të sjellshëm)<br>
+                     Puna në grup – Të vlerësojmë kontributin e të gjithëve, duke kombinuar aftësitë e individëve të veçantë 
+                     të stafit në partneritete të mira e të integruara (Të jemi së bashku)
+                    
+
                 </p>
                 <div class="row">
                     <div class="row-6 row-12-mobilep">
                         <h3>Vizioni</h3>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                            dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-                            sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
+                        <p>Vizioni ynë është përmirësimi i vazhdueshëm i produkteve dhe shërbimeve, për të plotësuar 
+                            nevojat e të gjithë klientëve tanë dhe kontribuar në rritjen e cilësisë së jetës së tyre.
+                            Vizioni i web faqes sonë është arritja e krijimit të mundësive të barabarta për te gjithë,
+                             duke bërë më të mirën këtu ku jemi me atë që kemi.</p>
                     </div>
                 </div>
             </div>
