--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav id="nav">
                 <ul>
                     <li>
-                        <a href="index.html" id="button">Ballina</a>
+                        <a href="index.html">Ballina</a>
                     </li>
                     <li>
                         <a href="rrethnesh.html">Rreth Nesh</a>
@@ -182,9 +182,9 @@
                     <span class="image featured">
                         <img src="images/pic02.jpg" alt="" />
                     </span>
-                    <h3>Mëso të programim online</h3>
-                    <p>Mëso gjithqka rreth programimit falas. Gjeni gjuhet me te avancuara te programimit dhe behuni pjese e
-                        nje tregu sfidues.
+                    <h3>Mësoni programim online</h3>
+                    <p>Mësoni gjithçka rreth programimit falas. Gjeni gjuhët më të avancuara të programimit dhe bëhuni pjesë e
+                        një tregu sfidues.
                     </p>
                     <ul class="actions special">
                         <li>
@@ -212,25 +212,6 @@
 
             </div>
         </div>
-
-    </section>
-
-    <!-- CTA -->
-    <section id="cta">
-
-        <h2>Sign up for beta access</h2>
-        <p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-        <form>
-            <div class="row gtr-50 gtr-uniform">
-                <div class="col-8 col-12-mobilep">
-                    <input type="email" name="email" id="email" placeholder="Email Address" />
-                </div>
-                <div class="col-4 col-12-mobilep">
-                    <input type="submit" value="Sign Up" class="fit" />
-                </div>
-            </div>
-        </form>
 
     </section>
 
